--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -21,7 +21,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="60dp"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
@@ -32,6 +32,32 @@
             android:layout_marginTop="50dp"
             android:textSize="20sp"
             tools:text="@string/username" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="25dp">
+
+            <TextView
+                android:id="@+id/tvFollower"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                tools:text="@string/follower" />
+
+            <TextView
+                android:id="@+id/tvFollowing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                tools:text="@string/following" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
